--- a/resources/assets/styles/components/_post-card.scss
+++ b/resources/assets/styles/components/_post-card.scss
@@ -44,7 +44,7 @@
   }
 }
 
-.c-post-card__content {
+.c-post-card__inner {
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -75,7 +75,7 @@
   font-size: ms(-1);
 }
 
-.c-post-card__header,
-.c-post-card__excerpt {
+.c-post-card__content,
+.c-post-card__header {
   margin-bottom: ms(-3);
 }
